[gd_scene load_steps=10 format=3 uid="uid://bmvyt47t7t0k3"]

[ext_resource type="Theme" uid="uid://bgl1w0ys3q4oe" path="res://resources/main_theme.tres" id="1_cjji1"]
[ext_resource type="Script" path="res://scripts/ui/cutscene.gd" id="1_crdtw"]
[ext_resource type="PackedScene" uid="uid://b5s1myf1gwty8" path="res://world.tscn" id="2_8y87v"]
[ext_resource type="VideoStream" path="res://assets/cutscene.ogv" id="4_v22ro"]
[ext_resource type="FontFile" uid="uid://b28h6yqots054" path="res://Minecraft.ttf" id="5_jo8ba"]

[sub_resource type="Animation" id="Animation_hwhgs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_rw7p1"]
resource_name = "end"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_blie7"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sb3qy"]
_data = {
"RESET": SubResource("Animation_hwhgs"),
"end": SubResource("Animation_rw7p1"),
"start": SubResource("Animation_blie7")
}

[node name="Cutscene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cjji1")
script = ExtResource("1_crdtw")
scene_to_load = ExtResource("2_8y87v")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stream = ExtResource("4_v22ro")
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
libraries = {
"": SubResource("AnimationLibrary_sb3qy")
}

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1713.0
offset_top = 15.0
offset_right = 1897.0
offset_bottom = 76.0
theme_override_fonts/font = ExtResource("5_jo8ba")
text = "Skip"

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Button" to="." method="_on_skip_button_pressed"]
